pkg/kgateway/translator/gateway/testutils/inputs/https-listener-detect-misdirected-requests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: same-namespace-with-https-listener
spec:
  gatewayClassName: kgateway
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: tls-validity-checks-certificate
  - name: https-with-hostname
    hostname: second-example.org
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: tls-validity-checks-certificate
  - name: https-with-wildcard-hostname
    hostname: '*.wildcard.org'
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: tls-validity-checks-certificate
  - name: https-with-hostname-matching-wildcard
    hostname: fourth-example.wildcard.org
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: tls-validity-checks-certificate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-1
spec:
  parentRefs:
  - name: same-namespace-with-https-listener
    sectionName: https
  hostnames:
  - example.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /detect-misdirected-requests
    backendRefs:
    - name: example-svc
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-2
spec:
  parentRefs:
  - name: same-namespace-with-https-listener
    sectionName: https-with-hostname
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /detect-misdirected-requests
    backendRefs:
    - name: example-svc
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-3
spec:
  parentRefs:
  - name: same-namespace-with-https-listener
    sectionName: https-with-wildcard-hostname
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /detect-misdirected-requests
    backendRefs:
    - name: example-svc
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-4
spec:
  parentRefs:
  - name: same-namespace-with-https-listener
    sectionName: https-with-hostname-matching-wildcard
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /detect-misdirected-requests
    backendRefs:
    - name: example-svc
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    test: test
  ports:
  - protocol: TCP
    port: 80
    targetPort: test
